--- a/css/styles.css
+++ b/css/styles.css
@@ -58,6 +58,10 @@ body {
 }
 
 .site-nav .link {
+  display: block;
+  padding-top: 32px;
+  padding-bottom: 32px;
+
   font-weight: 500;
   font-size: 14px;
   line-height: 1.14;
@@ -65,10 +69,29 @@ body {
   color: var(--main-txt-color);
   text-decoration: none;
 }
+
 .site-nav .link:hover,
 .site-nav .link:focus {
   color: var(--accent-color);
 }
+
+.site-nav {
+  display: flex;
+  margin-left: 93px;
+}
+
+.site-nav .item:not(:last-child) {
+  margin-right: 50px;
+}
+
+.contacts {
+  display: flex;
+}
+
+.contacts .item:not(:last-child) {
+  margin-right: 50px;
+}
+
 .contacts .link {
   font-weight: 500;
   font-size: 14px;
@@ -83,10 +106,19 @@ body {
   color: var(--accent-color);
 }
 
-/* ---------------Подвал сайта--------------- */
-/* .footer a {
-  display: inline-block; */
+.nav {
+  display: flex;
+  align-items: center;
 }
+
+.header-items {
+  display: flex;
+  align-items: center;
+  justify-content: space-between;
+}
+
+/* ---------------Подвал сайта--------------- */
+
 .logo-studio {
   color: var(--contrast-txt-color);
 }
@@ -125,7 +157,6 @@ body {
   color: var(--accent-color);
 }
 
-
 /* ---------------Страница Студия--------------- */
 /* ---------------Главный баннер--------------- */
 .hero {
@@ -151,7 +182,6 @@ body {
 }
 
 .hero-button {
-
   font-family: inherit;
   cursor: pointer;
   font-weight: 700;
