--- a/css/styles.css
+++ b/css/styles.css
@@ -4,10 +4,11 @@
   --secondary-txt-color: #757575;
   --contrast-txt-color: #ffffff;
   --main-title-color: #212121;
+  --bg-color: #ffffff;
 }
 
 body {
-  background-color: #ffffff;
+  background-color: var(--bg-color);
   color: #212121;
   font-family: Roboto, sans-serif;
 }
@@ -32,8 +33,8 @@ body {
 .container {
   width: 1200px;
   margin: 0 auto;
-  padding: 0 15px;
-  outline: 2px solid tomato;
+  padding-right: 15px;
+  padding-left: 15px;
 }
 
 .section {
@@ -47,7 +48,18 @@ img {
   height: auto;
 }
 
+h1,
+h2,
+h3,
+p {
+  margin: 0;
+}
+
 /* ---------------Шапка сайта--------------- */
+
+.header {
+  border-bottom: 1px solid #ececec;
+}
 
 .logo {
   font-family: Raleway;
@@ -139,6 +151,14 @@ img {
   background-color: #2f303a;
 }
 
+.address .list {
+  margin-top: 20px;
+}
+
+.address .item:not(:last-child) {
+  margin-bottom: 9px;
+}
+
 .location {
   font-style: normal;
   font-size: 14px;
@@ -174,15 +194,14 @@ img {
   padding-bottom: 200px;
   color: var(--contrast-txt-color);
   background-color: #2f303a;
-
   text-align: center;
 }
 
 .hero-title {
-  margin-top: 0;
+  width: 696px;
   margin-bottom: 30px;
-  /* padding-right: 452px;
-  padding-left: 452px; */
+  margin-right: auto;
+  margin-left: auto;
 
   font-weight: 900;
   font-size: 44px;
@@ -220,12 +239,15 @@ img {
   display: flex;
 }
 
+.features-item {
+  width: 270px;
+}
+
 .features-list .features-item:not(:last-child) {
   margin-right: 30px;
 }
 
 .features-name {
-  margin-top: 0;
   margin-bottom: 10px;
 
   font-weight: 700;
@@ -250,7 +272,6 @@ img {
 }
 
 .section-title {
-  margin-top: 0;
   margin-bottom: 50px;
 
   font-weight: 700;
@@ -277,12 +298,31 @@ img {
   background-color: #f5f4fa;
 }
 
+.members-list {
+  display: flex;
+}
+
 .member-item {
+  padding-bottom: 30px;
   font-size: 16px;
   line-height: 1.2;
+  background-color: var(--bg-color);
+  box-shadow: 0px 1px 3px rgba(0, 0, 0, 0.12), 0px 1px 1px rgba(0, 0, 0, 0.14),
+    0px 2px 1px rgba(0, 0, 0, 0.2);
+  border-radius: 0px 0px 4px 4px;
+}
+
+.members-list .member-item:not(:last-child) {
+  margin-right: 30px;
+}
+
+.member-item .content {
+  margin-top: 30px;
+  text-align: center;
 }
 
 .member-name {
+  margin-bottom: 10px;
   font-weight: 500;
 }
 
@@ -292,6 +332,12 @@ img {
 
 /* ---------------Страница Портфолио--------------- */
 /* ---------------Портфолио проектов--------------- */
+
+.filter-list {
+  margin-bottom: 34px;
+  display: flex;
+  justify-content: center;
+}
 
 .filter-item {
   cursor: pointer;
@@ -303,12 +349,42 @@ img {
   letter-spacing: 0.03em;
   color: var(--main-txt-color);
   background-color: #f5f4fa;
+
+  border-radius: 4px;
+  padding: 6px 22px;
+  min-width: 73px;
+  border: 2px solid transparent;
 }
 
 .filter-item:hover,
 .filter-item:focus {
   color: var(--contrast-txt-color);
   background-color: var(--accent-color);
+}
+
+.filter-list .item:not(:last-child) {
+  margin-right: 8px;
+}
+
+.projects-list {
+  display: flex;
+  flex-wrap: wrap;
+}
+
+.projects-list .item {
+  width: 370px;
+  margin-right: 30px;
+  margin-bottom: 30px;
+
+  border: 1px solid #eeeeee;
+}
+
+.projects-list .item:nth-child(3n) {
+  margin-right: 0;
+}
+
+.projects-list .item:nth-last-child(-n + 3) {
+  margin-bottom: 0;
 }
 
 .project-title {
@@ -322,4 +398,15 @@ img {
   line-height: 1.88;
   letter-spacing: 0.03em;
   color: var(--secondary-txt-color);
+}
+
+.projects-list .item {
+  display: flex;
+  flex-direction: column;
+}
+
+.item > .content {
+  flex-grow: 1;
+  margin-top: 20px;
+  padding: 0 24px 20px 24px;
 }
